src/style/gallery.css
#images_container, #collections_container, #collection_container, .collection_gallery {
	width: 100%;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: space-evenly;
}

.image_gallery_images {
	width: 100%;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: center;
}

.gallery_item_container {
	/* border-radius: 4px; */
	border: 1vh solid white;
	display: flex;
	flex-direction: column;
	margin: 1vh;
	/* box-shadow: 0 0 10px 2px #548ca5; */
	text-decoration: none;
}

.gallery_item_title {
	position: relative;
	/* background: #548ca5; */
	color: #111111;
	padding: 10px;
	padding-top: 20px;
	text-align: center;
	font-size: 16px;
	font-style: oblique;
	letter-spacing: 0.1em;
}

.gallery_item_title_controls {
	position: absolute;
	display: flex;
	flex-direction: row;
	top: 0;
	left: 100%;
}

.gallery_item_title_control {
	text-decoration: none;
	background: #111111;
	color: #ffe6cc;
	padding: 10px;
	margin: 0.1em;
	text-align: center;
	font-size: 16px;
	font-style: oblique;
	letter-spacing: 0.1em;
	cursor: pointer;
}

.complex_form .form_element {
	margin: 5px 10px 5px 10px;
	font-size: 20px;
	border: 0px;
	border-bottom: 2px solid #548ca5;
	background: transparent;
	color: #FFFFFF;
}

.gallery_item_top {
	display: flex;
	justify-content: center;
	align-items: center;
}

.gallery_item_preview {
	/* Necessary for stacking gallery_item_info_div */
	position: relative;
	flex-basis: content;
	justify-content: center;
	align-items: center;
}

.gallery_item_preview_image {
	height: 40vh;
}

.gallery_item_info_div {
	opacity: 0%;
	transition-duration: 0.15s;
	position: absolute;
	top: 0;
	left: 0;
	background: #00000099;
	width: 100%;
	height: 100%;
	display: flex;
	justify-content: center;
	flex-direction: column;
	align-items: center;
	margin-left: auto;
	margin-right: auto;
}

.gallery_item_info_div:hover {
	opacity: 100%;
	transition-timing-function: linear;
	cursor: pointer;
}

.gallery_item_info {
	margin: 10px;
	color: #ffffff;
}

.gallery_item_info_description {
	margin: 4vh;
	color: #ffffff;
	font-size: 1.5vh;
	font-weight: 500;
}

.gallery_item_info_title {
	margin: 10px 10px 0px 10px;
	color: #ffffff;
	font-size: 1.9vh;
	font-weight: 900;
}

